Hoan thanh man hinh danh sach user, xoa user

--- a/src/Pelo.Web/Pelo.Web.csproj
+++ b/src/Pelo.Web/Pelo.Web.csproj
@@ -22,4 +22,9 @@
     <ProjectReference Include="..\..\..\Pelo.Common\src\Pelo.Common\Pelo.Common.csproj" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Folder Include="Pages\" />
+  </ItemGroup>
+
 </Project>
