Add customer service

--- a/src/Pelo.Web/Pelo.Web.csproj
+++ b/src/Pelo.Web/Pelo.Web.csproj
@@ -27,6 +27,7 @@
 
   <ItemGroup>
     <Folder Include="Pages\" />
+    <Folder Include="wwwroot\js\pages\customer\" />
   </ItemGroup>
 
 </Project>
