--- a/src/Pelo.Web/Pelo.Web.csproj
+++ b/src/Pelo.Web/Pelo.Web.csproj
@@ -29,6 +29,8 @@
 
   <ItemGroup>
     <Folder Include="Pages\" />
+    <Folder Include="Views\Invoice\" />
+    <Folder Include="wwwroot\js\pages\invoice\" />
   </ItemGroup>
 
 </Project>
