--- a/src/Pelo.Web/Pelo.Web.csproj
+++ b/src/Pelo.Web/Pelo.Web.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Views\Invoice\Add.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="wwwroot\js\site.js" />
   </ItemGroup>
 
